--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                              <span>Caption:</span> <br>
-                              <textarea id="freeform" name="freeform" class="form-control" placeholder="Add the caption of your post here"></textarea>
+                              <div class="mb-2"><span>Caption:</span></div> 
+                              <textarea id="freeform" name="freeform" class="form-control mb-2" placeholder="Add the caption of your post here"></textarea>
+                              <button class="col-1 border rounded p-1 btn-light"><i class="fa-solid fa-camera"></i></button>
+                              <button class="col-1 border rounded p-1 m-1 btn-light"><i class="fa-solid fa-location-dot"></i></button>
                             </div>
                             <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
